Other Checkbox to have text

--- a/index.html
+++ b/index.html
@@ -193,8 +193,9 @@
             <label><input type="checkbox" name="needs[]" value="Professional advice & guidance"><span>Professional advice & guidance</span></label>
             <label><input type="checkbox" name="needs[]" value="Access to gender-specific educational resources"><span>Access to gender-specific educational resources</span></label>
             <label><input type="checkbox" name="needs[]" value="Access to gender-specific services"><span>Access to gender-specific services</span></label>
-            <label><input type="checkbox" name="needs[]" value="Other"><span>Other</span></label>
+            <label><input type="checkbox" name="needs[]" value="Other" id="needsOther"><span>Other</span></label>
           </div>
+          <input type="text" name="needs_other_text" id="needsOtherText" placeholder="Please specify..." style="display:none; margin-top: 1rem;" />
           <button type="button" onclick="nextQuestion()">Next</button>
         </div>
 
@@ -205,8 +206,9 @@
             <label><input type="checkbox" name="tasks[]" value="Self-care tasks (exercise, diet, rest, etc.)"><span>Self-care tasks (exercise, diet, rest, etc.)</span></label>
             <label><input type="checkbox" name="tasks[]" value="Daily routines (morning routine, nighttime routine, etc.)"><span>Daily routines (morning routine, nighttime routine, etc.)</span></label>
             <label><input type="checkbox" name="tasks[]" value="Work productivity"><span>Work productivity</span></label>
-            <label><input type="checkbox" name="tasks[]" value="Other"><span>Other</span></label>
+            <label><input type="checkbox" name="tasks[]" value="Other" id="tasksOther"><span>Other</span></label>
           </div>
+          <input type="text" name="tasks_other_text" id="tasksOtherText" placeholder="Please specify..." style="display:none; margin-top: 1rem;" />
           <button type="button" onclick="nextQuestion()">Next</button>
         </div>
 
@@ -306,8 +308,9 @@
             <label><input type="checkbox" name="times[]" value="Weekend afternoons"><span>Weekend afternoons</span></label>
             <label><input type="checkbox" name="times[]" value="Weekend nights"><span>Weekend nights</span></label>
             <label><input type="checkbox" name="times[]" value="Flexible"><span>Flexible</span></label>
-            <label><input type="checkbox" name="times[]" value="Other"><span>Other</span></label>
+            <label><input type="checkbox" name="times[]" value="Other" id="timesOther"><span>Other</span></label>
           </div>
+          <input type="text" name="times_other_text" id="timesOtherText" placeholder="Please specify..." style="display:none; margin-top: 1rem;" />
           <button type="button" onclick="nextQuestion()">Next</button>
         </div>
 
