Hero Page wording changes

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <img src="assets/WordmarkLushGreen.png" alt="The Gathering Logo" class="logo" />
     <h1><strong>It's Time to<em>Gather</em></strong>.</h1>
     <p class="tagline">
-      A virtual clubhouse for women to co-work, co-learn <br> and co-live for radical personal growth & healing.<br>
+      A virtual clubhouse for women dedicated <br> to radical personal growth & healing.<br>
       <!--<strong>The Gathering</strong> is your digital home — where focus, compassion and community meet.-->
     </p>
     <button class="cta-btn">Join the Waitlist</button>
-    <p class="mini-note">Supportive. Growth-oriented. Flexible.</p>
+    <p class="mini-note"><strong>See what we're building inside</strong></p>
   </div>
   <div class="scroll-hint">↓</div>
 </header>
