added breaks to hero

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <!--<strong>The Gathering</strong> is your digital home — where focus, compassion and community meet.-->
     </p>
     <button class="cta-btn">Join the Waitlist</button>
-    <p class="mini-note"><strong>See what we're building inside</strong></p>
+    <p class="mini-note"><strong><br><br><br>See what we're building inside</strong></p>
   </div>
   <div class="scroll-hint">↓</div>
 </header>
