--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
 <!-- ================= PRIMARY FEATURES SECTION START ================= -->
 <section id="primary-features" class="features-page">
   <div class="features-header">
-    <img src="assets/brandmark-placeholder.png" alt="The Gathering Logo" class="features-logo-left" />
+    <img src="assets/brandmarkwhite.png" alt="The Gathering Logo" class="features-logo-left" />
     <h2 class="features-title">Primary Features</h2>
-    <img src="assets/wordmark-placeholder.png" alt="The Gathering" class="features-logo-right" />
+    <img src="assets/wordmarkwhite.png" alt="The Gathering" class="features-logo-right" />
   </div>
 
   <div class="features-grid">
     <!-- Feature 1: Weekly Guided Body-Doubling Sessions -->
     <div class="feature-item">
       <div class="feature-images">
-        <img src="assets/feature-bodydoubling-1.jpg" alt="Body doubling session" class="feature-img" />
-        <img src="assets/feature-bodydoubling-2.jpg" alt="Body doubling workspace" class="feature-img" />
+        <img src="assets/bodydoubling1.jpg" alt="Body doubling session" class="feature-img" />
+        <img src="assets/bodydoubling2.jpg" alt="Body doubling workspace" class="feature-img" />
       </div>
       <div class="feature-content">
         <h3>Weekly Guided Body-Doubling Sessions</h3>
@@ -62,7 +62,7 @@
     <!-- Feature 3: A Mindfully Curated Calendar -->
     <div class="feature-item">
       <div class="feature-images">
-        <img src="assets/feature-calendar.jpg" alt="Calendar view" class="feature-img" />
+        <img src="assets/calendar.jpg" alt="Calendar view" class="feature-img" />
       </div>
       <div class="feature-content">
         <h3>A Mindfully Curated Calendar</h3>
@@ -76,7 +76,7 @@
     <!-- Feature 4: The Library -->
     <div class="feature-item">
       <div class="feature-images">
-        <img src="assets/feature-library.jpg" alt="Library interior" class="feature-img" />
+        <img src="assets/libraryinterior.jpg" alt="Library interior" class="feature-img" />
       </div>
       <div class="feature-content">
         <h3>The Library</h3>
