--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- ================= HERO SECTION START ================= -->
 <header id="hero">
   <div class="hero-content">
-    <img src="assets/WordmarkLushGreen.png" alt="The Gathering Logo" class="logo" />
+    <img src="assets/wordmarkgreen.png" alt="The Gathering Logo" class="logo" />
     <h1><strong>It's Time to<em>Gather</em></strong>.</h1>
     <p class="tagline">
       A virtual clubhouse for women dedicated <br> to radical personal growth & healing.<br>
@@ -25,7 +25,7 @@
 <!-- ================= HERO SECTION END ================= -->
 
 <!-- ================= PRIMARY FEATURES SECTION START ================= -->
-<section id="primary-features" class="features-page">
+<section id="primary-features" class="features-page visible">
   <div class="features-header">
     <img src="assets/brandmarkwhite.png" alt="The Gathering Logo" class="features-logo-left" />
     <h2 class="features-title">Primary Features</h2>
