--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 
     <!-- Feature 2: Special Events -->
     <div class="feature-item">
+      <div class="feature-images">
+        <img src="assets/bodydoubling1.jpg" alt="Special events" class="feature-img" />
+      </div>
       <div class="feature-content">
         <h3>Special Events</h3>
         <p>
