story 2 's first layout

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <!-- Feature 2: Special Events -->
     <div class="feature-item">
       <div class="feature-images">
-        <img src="assets/bodydoubling1.jpg" alt="Special events" class="feature-img" />
+        <img src="assets/specialevents.jpg" alt="Special events" class="feature-img" />
       </div>
       <div class="feature-content">
         <h3>Special Events</h3>
@@ -99,23 +99,51 @@
 </section>
 <!-- ================= PRIMARY FEATURES SECTION END ================= -->
 
-<!-- ================= STORY 2 SECTION START ================= -->
-<section id="story2" class="story-page">
-  <div class="story-content">
-    <div class="story-text-column">
-      <p>
-        "Third places"—your home away from home—have been disappearing over the last few years, whether you realise it or not. Your favourite hangouts are either gone or endangered. There are crowds of people everywhere, but instead of feeling excited, you're chronically anxious. And alone. Then you go home, and while it's peaceful, you feel isolated.
-      </p>
+<!-- ================= COMING SOON SECTION START ================= -->
+<section id="coming-soon" class="coming-soon-page visible">
+  <div class="coming-soon-header">
+    <img src="assets/BrandmarkWhite.png" alt="The Gathering Logo" class="coming-soon-logo-left" />
+    <h2 class="coming-soon-title">Coming Soon</h2>
+    <img src="assets/WordmarkWhite.png" alt="The Gathering" class="coming-soon-logo-right" />
+  </div>
+
+  <div class="coming-soon-grid">
+    <!-- Feature 1: Directory of Services -->
+    <div class="coming-soon-item">
+      <div class="coming-soon-images">
+        <img src="assets/bodydoubling1.jpg" alt="Directory services" class="coming-soon-img" />
+      </div>
+      <div class="coming-soon-content">
+        <h3>Directory of Services by Vetted Providers</h3>
+        <p>
+          Looking for a qualified doctor, therapist, coach, counsellor or healer specialised in women's health and wellbeing? Or are you a specialist service provider qualified to serve our community?
+        </p>
+        <p class="coming-soon-note"><em>*Access to the directory will be free for all, with discounts off of services offered by our partners for paying members. Apply to upgrade your membership to the Community Leader tier if you're a service provider who believes in our vision and mission</em></p>
+      </div>
     </div>
-    
-    <div class="story-image-column">
-      <img src="assets/story2.jpg" alt="Person on train" />
+
+    <!-- Feature 2: Community Forum -->
+    <div class="coming-soon-item">
+      <div class="coming-soon-images">
+        <img src="assets/libraryinterior.jpg" alt="Community forum" class="coming-soon-img" />
+      </div>
+      <div class="coming-soon-content">
+        <h3>Curated & Community-Led Forum</h3>
+        <p>
+          Connect deeper with other members of the community through shared goals and passions.
+        </p>
+        <p class="coming-soon-note"><em>*Access only available to paying members</em></p>
+      </div>
     </div>
   </div>
-  <p class="closing-text">You're not alone.</p>
-  <div class="scroll-hint">↓</div>
+
+  <div class="coming-soon-cta">
+    <button class="cta-btn-white">Join the Waitlist</button>
+    <button class="cta-btn-outline">Want to help us grow faster, better?<br>We're looking for partners!</button>
+    <div class="scroll-hint">↓</div>
+  </div>
 </section>
-<!-- ================= STORY 2 SECTION END ================= -->
+<!-- ================= COMING SOON SECTION END ================= -->
 
 <!-- ================= STORY 3 SECTION START ================= -->
 <section id="story3" class="story-page">
