--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <!-- Feature 1: Directory of Services -->
     <div class="coming-soon-item">
       <div class="coming-soon-images">
-        <img src="assets/bodydoubling1.jpg" alt="Directory services" class="coming-soon-img" />
+        <img src="assets/vettedproviders.jpg" alt="Directory services" class="coming-soon-img" />
       </div>
       <div class="coming-soon-content">
         <h3>Directory of Services by Vetted Providers</h3>
@@ -125,7 +125,7 @@
     <!-- Feature 2: Community Forum -->
     <div class="coming-soon-item">
       <div class="coming-soon-images">
-        <img src="assets/libraryinterior.jpg" alt="Community forum" class="coming-soon-img" />
+        <img src="assets/communityledforum.jpg" alt="Community forum" class="coming-soon-img" />
       </div>
       <div class="coming-soon-content">
         <h3>Curated & Community-Led Forum</h3>
@@ -145,7 +145,8 @@
 </section>
 <!-- ================= COMING SOON SECTION END ================= -->
 
-<!-- ================= STORY 3 SECTION START ================= -->
+<!-- ================= STORY 3 SECTION START (COMMENTED OUT) ================= -->
+<!--
 <section id="story3" class="story-page">
   <div class="story-content">
     <div class="story-image-column">
@@ -165,7 +166,8 @@
   <p class="closing-text">Your questions, answered. Your search has ended.</p>
   <div class="scroll-hint">↓</div>
 </section>
-<!-- ================= STORY 3 SECTION END ================= -->
+-->
+<!-- ================= STORY 3 SECTION END (COMMENTED OUT) ================= -->
 
   <!-- ================= WAITLIST SECTION START ================= -->
   <section id="waitlist">
