added new structure for hero1,story1-3,hero2,story4-5

--- a/index.html
+++ b/index.html
@@ -1,15 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+<!-- ================= HERO 2 SECTION END ================= -->
+
+<!-- ======  </div>
+</section>
+<!-- ================= STORY 4 SECTION END ================= -->
+
+<!-- ================= STORY 5 SECTION START (RENAMED FROM COMING SOON) - KIV ================= -->
+<section id="story5" class="features-page visible">===== STORY 4 SECTION START (RENAMED FROM PRIMARY FEATURES) ================= -->
+<section id="story4" class="features-page visible">eta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
   <title>The Gathering — Waitlist</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
-  <!-- ================= HERO SECTION START ================= -->
-<header id="hero">
+  <!-- ================= HERO 1 SECTION START (NEW) ================= -->
+  <!-- PLACEHOLDER: Hero 1 section to be added -->
+  <!-- ================= HERO 1 SECTION END ================= -->
+
+  <!-- ================= STORY 1 SECTION START (NEW) ================= -->
+  <!-- PLACEHOLDER: Story 1 section to be added -->
+  <!-- ================= STORY 1 SECTION END ================= -->
+
+  <!-- ================= STORY 2 SECTION START (NEW) ================= -->
+  <!-- PLACEHOLDER: Story 2 section to be added -->
+  <!-- ================= STORY 2 SECTION END ================= -->
+
+  <!-- ================= STORY 3 SECTION START (NEW) ================= -->
+  <!-- PLACEHOLDER: Story 3 section to be added -->
+  <!-- ================= STORY 3 SECTION END ================= -->
+
+  <!-- ================= HERO 2 SECTION START (RENAMED FROM HERO) ================= -->
+<header id="hero2">
   <div class="hero-content">
     <img src="assets/WordmarkGreen.png" alt="The Gathering Logo" class="logo" />
     <h1><strong>It's Time to<em>Gather</em></strong>.</h1>
@@ -22,7 +46,7 @@
   </div>
   <div class="scroll-hint">↓</div>
 </header>
-<!-- ================= HERO SECTION END ================= -->
+<!-- ================= HERO 2 SECTION END ================= -->
 
 <!-- ================= PRIMARY FEATURES SECTION START ================= -->
 <section id="primary-features" class="features-page visible">
@@ -143,9 +167,9 @@
     <div class="scroll-hint">↓</div>
   </div>
 </section>
-<!-- ================= COMING SOON SECTION END ================= -->
+<!-- ================= STORY 5 SECTION END ================= -->
 
-<!-- ================= STORY 3 SECTION START (COMMENTED OUT) ================= -->
+<!-- ================= STORY 3 SECTION (COMMENTED OUT - OLD) ================= -->
 <!--
 <section id="story3" class="story-page">
   <div class="story-content">
