--- a/index.html
+++ b/index.html
@@ -17,7 +17,19 @@
 
 <body>
   <!-- ================= HERO 1 SECTION START (NEW) ================= -->
-  <!-- PLACEHOLDER: Hero 1 section to be added -->
+  <header id="hero1">
+    <div class="hero1-content">
+      <img src="assets/WordmarkGreen.png" alt="The Gathering Logo" class="hero1-logo" />
+      <h1>It's Time to<em>Gather</em>.</h1>
+      <p class="tagline">
+        A virtual clubhouse for women to co-work, co-learn and<br>
+        co-live for radical personal growth & healing.
+      </p>
+      <button class="cta-btn">Join the Waitlist</button>
+      <p class="mini-note">What's this about?</p>
+    </div>
+    <div class="scroll-hint">↓</div>
+  </header>
   <!-- ================= HERO 1 SECTION END ================= -->
 
   <!-- ================= STORY 1 SECTION START (NEW) ================= -->
