fixed padding issue at top of page

--- a/index.html
+++ b/index.html
@@ -1,15 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- ================= HERO 2 SECTION END ================= -->
-
-<!-- ======  </div>
-</section>
-<!-- ================= STORY 4 SECTION END ================= -->
-
-<!-- ================= STORY 5 SECTION START (RENAMED FROM COMING SOON) - KIV ================= -->
-<section id="story5" class="features-page visible">===== STORY 4 SECTION START (RENAMED FROM PRIMARY FEATURES) ================= -->
-<section id="story4" class="features-page visible">eta charset="UTF-8" />
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
   <title>The Gathering — Waitlist</title>
   <link rel="stylesheet" href="css/style.css" />
