minor edits to hide story 5 and sort story 4's bg

--- a/index.html
+++ b/index.html
@@ -200,7 +200,10 @@
   <div class="features-cta">
     <p class="cta-text">See what else we're planning.</p>
     <div class="scroll-hint">↓</div>
-    <button class="cta-btn-white">Join the Waitlist</button>
+    <div class="cta-buttons">
+      <button class="cta-btn-white">Join the Waitlist</button>
+      <button class="cta-btn-outline">We're looking for partners!</button>
+    </div>
   </div>
 </section>
 <!-- ================= FEATURES SECTION END ================= -->
