commented out story 5

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
   </div>
 
   <div class="coming-soon-grid">
-    <!-- Feature 1: Directory of Services -->
+    <-- Feature 1: Directory of Services --><!---
     <div class="coming-soon-item">
       <div class="coming-soon-images">
         <img src="assets/vettedproviders.jpg" alt="Directory services" class="coming-soon-img" />
@@ -232,7 +232,7 @@
       </div>
     </div>
 
-    <!-- Feature 2: Community Forum -->
+    <!-- Feature 2: Community Forum --><!--
     <div class="coming-soon-item">
       <div class="coming-soon-images">
         <img src="assets/communityledforum.jpg" alt="Community forum" class="coming-soon-img" />
