image and bg color change, comment edit for future adds

--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
     <!-- Feature 1: Weekly Guided Body-Doubling Sessions -->
     <div class="feature-item">
       <div class="feature-images">
-        <img src="assets/bodydoubling1.jpg" alt="Body doubling session" class="feature-img" />
-        <img src="assets/bodydoubling2.jpg" alt="Body doubling workspace" class="feature-img" />
+        <img src="assets/selfiekid.jpg" alt="Body doubling session" class="feature-img" />
+        <img src="assets/shelfgirl.jpg" alt="Body doubling workspace" class="feature-img" />
       </div>
       <div class="feature-content">
         <h3>Weekly Guided Body-Doubling Sessions</h3>
@@ -157,7 +157,7 @@
     <!-- Feature 2: Special Events -->
     <div class="feature-item">
       <div class="feature-images">
-        <img src="assets/specialevents.jpg" alt="Special events" class="feature-img" />
+        <img src="assets/libraryspeakers.jpg" alt="Special events" class="feature-img" />
       </div>
       <div class="feature-content">
         <h3>Special Events</h3>
@@ -171,7 +171,7 @@
     <!-- Feature 3: A Mindfully Curated Calendar -->
     <div class="feature-item">
       <div class="feature-images">
-        <img src="assets/calendar.jpg" alt="Calendar view" class="feature-img" />
+        <img src="assets/scheduling.jpg" alt="Calendar view" class="feature-img" />
       </div>
       <div class="feature-content">
         <h3>A Mindfully Curated Calendar</h3>
