feature tab edit CTA buttons

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     <div class="scroll-hint">↓</div>
     <div class="cta-buttons">
       <button class="cta-btn-white">Join the Waitlist</button>
-      <button class="cta-btn-outline">We're looking for partners!</button>
+      <a href="mailto:info@thegathering.club" class="cta-btn-outline">We're looking for partners!</a>
     </div>
   </div>
 </section>
