--- a/index.html
+++ b/index.html
@@ -291,12 +291,7 @@
         <div class="question active" data-step="1">
           <h2>The Gathering — Waitlist</h2>
           <p>
-            The main purpose of this form is to help us create a platform that best serves your needs for our private beta launch.
             We will only be opening the launch to 30 members so the faster and more complete your survey, the higher you get on the list!
-          </p>
-          <p>
-            By submitting this form, you also consent to receiving emails from The Gathering related to our launch and occasional marketing communications.
-            We're a huge advocate of self-care and self-agency—please unsubscribe if and when our communications are no longer serving you, using the link in our emails.
           </p>
           <button type="button" onclick="nextQuestion()">Next</button>
         </div>
@@ -512,6 +507,7 @@
         <div class="question" data-step="24">
           <h2>Anything else you'd like to add?</h2>
           <textarea name="other_info" placeholder="Share any final thoughts..."></textarea>
+          <p class="form-disclaimer">By submitting this form, you also consent to receiving emails from The Gathering related to our launch and occasional marketing communications. We're a huge advocate of self-care and self-agency—please unsubscribe if and when our communications are no longer serving you, using the link in our emails.</p>
           <button type="submit">Join the Waitlist</button>
         </div>
 
