opacity  change for story 1-3

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!-- ================= HERO 1 SECTION END ================= -->
 
   <!-- ================= STORY 1 SECTION START (NEW) ================= -->
-  <section id="story1" class="story-page">
+  <section id="story1" class="story-page visible">
     <div class="story-content">
       <div class="story-text-column">
         <h2>The world has changed. And so have you.</h2>
@@ -59,7 +59,7 @@
   <!-- ================= STORY 1 SECTION END ================= -->
 
   <!-- ================= STORY 2 SECTION START (NEW) ================= -->
-  <section id="story2" class="story-page">
+  <section id="story2" class="story-page visible">
     <div class="story-content">
       <div class="story-text-column">
         <p>
@@ -85,7 +85,7 @@
   <!-- ================= STORY 2 SECTION END ================= -->
 
   <!-- ================= STORY 3 SECTION START (NEW) ================= -->
-  <section id="story3" class="story-page">
+  <section id="story3" class="story-page visible">
     <div class="story-content">
       <div class="story-image-column">
         <img src="assets/womanforest1.jpg" alt="Person in forest" />
