survey page link fix and Hero 2 revamp

--- a/index.html
+++ b/index.html
@@ -117,15 +117,14 @@
   <!-- ================= HERO 2 SECTION START (RENAMED FROM HERO) ================= -->
 <header id="hero2">
   <div class="hero-content">
-    <img src="assets/WordmarkGreen.png" alt="The Gathering Logo" class="logo" />
-    <h1><strong>It's Time to<em>Gather</em></strong>.</h1>
+    <h1>Welcome to<br>The Gathering</h1>
     <p class="tagline">
-      A virtual clubhouse for women dedicated <br> to radical personal growth & healing.<br>
-      <!--<strong>The Gathering</strong> is your digital home — where focus, compassion and community meet.-->
+      A virtual clubhouse for women dedicated<br>
+      to radical personal growth & healing.
     </p>
-    <button class="cta-btn" onclick="window.location.href='waitlistform.html'">Join the Waitlist</button>
-    <p class="mini-note"><strong><br><br><br>See what we're building inside</strong></p>
+    <button class="cta-btn" onclick="window.location.href='survey/index.html'">Join the Waitlist</button>
   </div>
+  <p class="see-inside">See what we're building inside</p>
   <div class="scroll-hint">↓</div>
 </header>
 <!-- ================= HERO 2 SECTION END ================= -->
