--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       A virtual clubhouse for women dedicated<br>
       to radical personal growth & healing.
     </p>
-    <button class="cta-btn" onclick="window.location.href='survey/index.html'">Join the Waitlist</button>
+    <button class="cta-btn" onclick="window.location.href='waitlistform.html'">Join the Waitlist</button>
   </div>
   <p class="see-inside">See what we're building inside</p>
   <div class="scroll-hint">↓</div>
