--- a/waitlistform.html
+++ b/waitlistform.html
@@ -19,6 +19,11 @@
         <div class="question active" data-step="1">
           <h2>The Gathering — Waitlist</h2>
           
+          <p style="font-size: 1.5rem; margin: 1.5rem 0;">✨</p>
+          <p>
+            The main purpose of this form is to help us create a platform that best serves your needs for our private beta launch. We will only be opening the launch to 30 members so the faster and more complete your survey, the higher you get on the list!
+          </p>
+          
           <h3>📜 Disclaimer</h3>
           <p>
             This survey helps us understand who's stepping into our orbit and ensures we shape The Gathering around real needs, not guesswork. Please answer honestly — there are no wrong answers, only missed opportunities.
