--- a/waitlistform.html
+++ b/waitlistform.html
@@ -19,7 +19,7 @@
         <div class="question active" data-step="1">
           <h2>The Gathering — Waitlist</h2>
           
-          <p style="font-size: 1.5rem; margin: 1.5rem 0;">✨</p>
+          <p style="font-size: 1.5rem; margin: 1.5rem 0;"></p>
           <p>
             The main purpose of this form is to help us create a platform that best serves your needs for our private beta launch. We will only be opening the launch to 30 members so the faster and more complete your survey, the higher you get on the list!
           </p>
