--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     <!-- Feature 2: Special Events -->
     <div class="feature-item">
       <div class="feature-images">
-        <img src="assets/libraryspeakers.jpg" alt="Special events" class="feature-img" />
+        <img src="assets/inclusivity1.jpg" alt="Special events" class="feature-img" />
       </div>
       <div class="feature-content">
         <h3>Special Events</h3>
