--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <!-- ================= HERO 1 SECTION START (NEW) ================= -->
   <header id="hero1">
+    <img src="assets/BrandmarkWhite.png" alt="The Gathering" class="section-brandmark" />
     <div class="hero1-content">
       <img src="assets/WordmarkGreen.png" alt="The Gathering Logo" class="hero1-logo" />
       <h1>It's Time to<em>Gather</em>.</h1>
@@ -26,6 +27,7 @@
 
   <!-- ================= STORY 1 SECTION START (NEW) ================= -->
   <section id="story1" class="story-page visible">
+    <img src="assets/BrandmarkWhite.png" alt="The Gathering" class="section-brandmark" />
     <div class="story-content">
       <div class="story-text-column">
         <h2>The world has changed. And so have you.</h2>
@@ -60,6 +62,7 @@
 
   <!-- ================= STORY 2 SECTION START (NEW) ================= -->
   <section id="story2" class="story-page visible">
+    <img src="assets/BrandmarkWhite.png" alt="The Gathering" class="section-brandmark" />
     <div class="story-content">
       <div class="story-text-column">
         <p>
@@ -86,6 +89,7 @@
 
   <!-- ================= STORY 3 SECTION START (NEW) ================= -->
   <section id="story3" class="story-page visible">
+    <img src="assets/BrandmarkWhite.png" alt="The Gathering" class="section-brandmark" />
     <div class="story-content">
       <div class="story-image-column">
         <img src="assets/womanforest1.jpg" alt="Person in forest" />
@@ -131,6 +135,7 @@
 
 <!-- ================= FEATURES SECTION START ================= -->
 <section id="primary-features" class="features-page visible">
+  <img src="assets/BrandmarkWhite.png" alt="The Gathering" class="section-brandmark" />
   <div class="features-header">
     <img src="assets/BrandmarkWhite.png" alt="The Gathering Logo" class="features-logo-left" />
     <h2 class="features-title">Features</h2>
