push landing page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,36 @@
 </head>
 
 <body>
+  <!-- ================= LANDING PAGE SECTION START ================= -->
+  <section id="landing-page">
+    <img src="assets/BrandmarkWhite.png" alt="The Gathering" class="landing-brandmark" />
+    
+    <div class="landing-nav">
+      <p class="landing-announcement">Now Onboarding Founding Members. <strong><em>Join the Club</em></strong></p>
+      <div class="landing-nav-links">
+        <a href="#primary-features">PEEK INSIDE</a>
+        <a href="#story1">ABOUT</a>
+      </div>
+    </div>
+
+    <div class="landing-content">
+      <h1>Welcome to<br>The Gathering</h1>
+      <p class="landing-tagline">
+        A virtual clubhouse for women dedicated<br>
+        to radical personal growth & healing.
+      </p>
+      <p class="landing-cta-text">
+        BECOME A FOUNDING<br>
+        COMMUNITY MEMBER &<br>
+        UNLOCK SPECIAL PRIVILEGES
+      </p>
+      <button class="landing-cta-btn" onclick="window.location.href='survey/index.html'">FIND OUT MORE</button>
+    </div>
+
+    <p class="landing-footer-text">Co-work, co-learn & co-live with like-minded women across the world.</p>
+  </section>
+  <!-- ================= LANDING PAGE SECTION END ================= -->
+
   <!-- ================= HERO 1 SECTION START (NEW) ================= -->
   <header id="hero1">
     <img src="assets/BrandmarkWhite.png" alt="The Gathering" class="section-brandmark" />
