Landing Page edit 1 - Hid's comments

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img src="assets/BrandmarkWhite.png" alt="The Gathering" class="landing-brandmark" />
     
     <div class="landing-nav">
-      <p class="landing-announcement">Now Onboarding Founding Members. <strong><em>Join the Club</em></strong></p>
+      <p class="landing-announcement">Now Onboarding Founding Members. <strong><em>Join the Waitlist</em></strong></p>
       <div class="landing-nav-links">
         <a href="#primary-features">PEEK INSIDE</a>
         <a href="#story1">ABOUT</a>
