edit 2 for hero section, wording fixes and alignments

--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 <body>
   <!-- ================= LANDING PAGE SECTION START ================= -->
   <section id="landing-page">
-    <img src="assets/BrandmarkWhite.png" alt="The Gathering" class="landing-brandmark" />
-    
     <div class="landing-nav">
-      <p class="landing-announcement">Now Onboarding Founding Members. <strong><em>Join the Waitlist</em></strong></p>
+      <img src="assets/BrandmarkWhite.png" alt="The Gathering" class="landing-brandmark" />
+      <p class="landing-announcement">Now Onboarding Founding Members. <strong><em><a href="survey.html">Join the Waitlist</a></em></strong></p>
       <div class="landing-nav-links">
         <a href="#primary-features">PEEK INSIDE</a>
         <a href="#story1">ABOUT</a>
