edit 3 to landing page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <button class="landing-cta-btn" onclick="window.location.href='survey/index.html'">FIND OUT MORE</button>
     </div>
 
-    <p class="landing-footer-text">Co-work, co-learn & co-live with like-minded women across the world.</p>
+    <p class="landing-footer-text">Co-work, co-learn, and co-live with like-minded women across the world.</p>
   </section>
   <!-- ================= LANDING PAGE SECTION END ================= -->
 
