--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <section id="landing-page">
     <div class="landing-nav">
       <img src="assets/BrandmarkWhite.png" alt="The Gathering" class="landing-brandmark" />
-      <p class="landing-announcement">Now Onboarding Founding Members. <strong><em><a href="survey.html">Join the Waitlist</a></em></strong></p>
+      <p class="landing-announcement">Now Onboarding Founding Members. <strong><em><a href="waitlistform.html">Join the Waitlist</a></em></strong></p>
       <div class="landing-nav-links">
         <a href="#primary-features">PEEK INSIDE</a>
         <a href="#story1">ABOUT</a>
