blog nav and coming soon added

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <div class="landing-nav-links">
         <a href="#primary-features">PEEK INSIDE</a>
         <a href="#story1">ABOUT</a>
+        <a href="blog.html">BLOG</a>
       </div>
     </div>
 
