--- a/blog.html
+++ b/blog.html
@@ -16,6 +16,8 @@
       background-color: var(--bg);
       color: var(--text);
       padding: 2rem;
+      opacity: 1 !important;
+      transform: none !important;
     }
 
     #blog-coming-soon img.brandmark {
