genius forgot there's no green, only black

--- a/blog.html
+++ b/blog.html
@@ -65,7 +65,7 @@
 
 <body>
   <section id="blog-coming-soon">
-    <img src="assets/BrandmarkGreen.png" alt="The Gathering" class="brandmark" />
+    <img src="assets/BrandmarkBlack.png" alt="The Gathering" class="brandmark" />
     <h1>Coming Soon</h1>
     <p>
       Our blog is brewing. Stay tuned for stories, insights and conversations about radical personal growth and healing.
