privacy policy page

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 <!-- ================= STORY 3 SECTION END (COMMENTED OUT) ================= -->
 
   <footer>
-    <p>© 2025 The Gathering. All rights reserved.</p>
+    <p>© 2025 The Gathering. All rights reserved. | <a href="privacypolicy.html" style="color: inherit; text-decoration: underline;">Privacy Policy</a></p>
   </footer>
 </body>
 </html>
