edit of pp page

--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -100,11 +100,10 @@
       <div class="header">
         <img src="assets/BrandmarkWhite.png" alt="The Gathering" />
         <h1>Privacy Policy</h1>
-        <p style="font-style: italic; color: var(--shore);">Last Updated: [Date]</p>
+        <p style="font-style: italic; color: var(--shore);">Last Updated: December 11, 2025</p>
       </div>
 
       <div class="content">
-        <p><strong>Effective Date:</strong> December 11, 2025</p>
         
         <p>Welcome to The Gathering. We are committed to protecting your privacy and ensuring you have a positive experience on our platform. This Privacy Policy outlines how we collect, use, disclose and safeguard your information when you visit our website or use our services.</p>
 
@@ -145,9 +144,7 @@
         <h2>3. Information Sharing and Disclosure</h2>
         <p>We do not sell, trade or rent your personal information to third parties. We may share your information only in the following circumstances:</p>
         <ul>
-          <li><strong>Service Providers:</strong> With trusted third-party service providers who assist us in operating our website and services (e.g., email service providers, analytics tools)</li>
           <li><strong>Legal Requirements:</strong> When required by law or to protect our rights, safety or property</li>
-          <li><strong>Business Transfers:</strong> In connection with a merger, acquisition or sale of assets</li>
           <li><strong>With Your Consent:</strong> When you have given us explicit permission to share your information</li>
         </ul>
 
@@ -164,7 +161,7 @@
           <li>Withdraw consent where we rely on consent to process your data</li>
         </ul>
         
-        <p>To exercise these rights, please contact us at [contact email].</p>
+        <p>To exercise these rights, please contact us at info@thegathering.club.</p>
 
         <h2>6. Cookies and Tracking Technologies</h2>
         <p>We may use cookies and similar tracking technologies to enhance your experience on our website. You can control cookie preferences through your browser settings. Please note that disabling cookies may affect the functionality of our website.</p>
@@ -184,12 +181,12 @@
         <h2>11. Contact Us</h2>
         <p>If you have any questions, concerns or requests regarding this Privacy Policy or our data practices, please contact us at:</p>
         <p><strong>The Gathering</strong><br>
-        Email: [contact email address]</p>
+        Email: info@thegathering.club</p>
 
         <hr style="margin: 3rem 0; border: none; border-top: 1px solid var(--solitude);">
 
         <h1 style="text-align: center; margin-top: 4rem;">Terms of Use</h1>
-        <p style="text-align: center; font-style: italic; color: var(--shore);"><strong>Effective Date:</strong> December 11, 2025</p>
+        <p style="text-align: center; font-style: italic; color: var(--shore);">Last Updated: December 11, 2025</p>
 
         <p>Welcome to The Gathering. By accessing or using our website and services, you agree to be bound by these Terms of Use. Please read them carefully.</p>
 
@@ -262,7 +259,13 @@
         <h2>15. Contact Information</h2>
         <p>For questions or concerns about these Terms of Use, please contact us at:</p>
         <p><strong>The Gathering</strong><br>
-        Email: [contact email address]</p>
+        Email: info@thegathering.club</p>
+
+        <hr style="margin: 3rem 0; border: none; border-top: 1px solid var(--solitude);">
+
+        <p style="text-align: center; margin-top: 2rem; color: var(--shore);">
+          © 2025 The Gathering™. All rights reserved.
+        </p>
       </div>
 
       <div style="text-align: center;">
